# conf-schedule

./: .gitignore  README.md
configexamples/: 2012-08-27-event-template.txt  2012-08-27-event-template.txt.json  erlang.txt  erlang.txt.json  fhpc12-program.txt  haskell-symposium.txt  haskell-symposium.txt.json  him.txt  him.txt.json  hope-schedule.txt  hope-schedule.txt.json  icfp-day1.txt  icfp-day1.txt.json  icfp-day2.txt  icfp-day3.txt  lfmtp.txt  lfmtp.txt.json  ml2012-event.txt  ml2012-event.txt.json  xldi-schedule.txt  xldi-schedule.txt.json
configtool/: BasicTypes.hs  ConfigData.hs  ConfigJSON.hs  JsonUtils.hs  LICENSE  Main.hs  ParseConfigUU.hs  ParseUtils.hs  configtool.cabal
popl13/: BEAT2013-program.txt  ID2013program.txt  OBT13.txt  PEPM13-program.txt  PLMW13program.txt  PLPV2013 program-3.txt  POPL2013 A Track-day1.tsv  POPL2013 A Track-day2.tsv  POPL2013 A Track-day3.tsv  POPL2013 A Track.tsv  POPL2013 B Track-day1.tsv  POPL2013 B Track-day2.tsv  POPL2013 B Track-day3.tsv  POPL2013 B Track.tsv  PPREW2013 program.txt  VMCAI2013 program-1.txt  VMCAI2013 program-2.txt  VMCAI2013 program-3.txt
